@@ -31,6 +31,16 @@ class CollectionsResourceGetListProcessor extends modObjectGetListProcessor
     public $searchQueryTitleOnly = false;
 
     public $iconMap = array();
+    
+    public $permissions = array(
+        'publish_document' => false,
+        'unpublish_document' => false,
+        'delete_document' => false,
+        'undelete_document' => false,
+        'view_document' => false,
+        'edit_document' => false,
+        'purge_deleted' => false,
+    );
 
     public function initialize()
     {
@@ -38,7 +48,17 @@ class CollectionsResourceGetListProcessor extends modObjectGetListProcessor
         if (empty($parent)) {
             return false;
         }
-
+        
+        $this->permissions = array(
+            'publish_document' => $this->modx->hasPermission('publish_document'),
+            'unpublish_document' => $this->modx->hasPermission('unpublish_document'),
+            'delete_document' => $this->modx->hasPermission('delete_document'),
+            'undelete_document' => $this->modx->hasPermission('undelete_document'),
+            'view_document' => $this->modx->hasPermission('view_document'),
+            'edit_document' => $this->modx->hasPermission('edit_document'),
+            'purge_deleted' => $this->modx->hasPermission('purge_deleted'),
+        );
+        
         $this->setActions();
 
         $parentObject = $this->modx->getObject('modResource', $parent);
@@ -467,30 +487,32 @@ class CollectionsResourceGetListProcessor extends modObjectGetListProcessor
             if (isset($this->actions[$button])) {
                 switch ($button) {
                     case 'publish':
-                        if (empty($resourceArray['published'])) {
+                        if ($this->permissions['publish_document'] && empty($resourceArray['published'])) {
                             $resourceArray['actions'][] = $this->actions[$button];
                         }
                         break;
                     case 'quickupdate':
-                        $resourceArray['actions'][] = $this->actions[$button];
+                        if ($this->permissions['edit_document']) {
+                            $resourceArray['actions'][] = $this->actions[$button];
+                        }
                         break;
                     case 'unpublish':
-                        if (!empty($resourceArray['published'])) {
+                        if ($this->permissions['unpublish_document'] && !empty($resourceArray['published'])) {
                             $resourceArray['actions'][] = $this->actions[$button];
                         }
                         break;
                     case 'delete':
-                        if (empty($resourceArray['deleted'])) {
+                        if ($this->permissions['delete_document'] && empty($resourceArray['deleted'])) {
                             $resourceArray['actions'][] = $this->actions[$button];
                         }
                         break;
                     case 'undelete':
-                        if (!empty($resourceArray['deleted'])) {
+                        if ($this->permissions['undelete_document'] && !empty($resourceArray['deleted'])) {
                             $resourceArray['actions'][] = $this->actions[$button];
                         }
                         break;
                     case 'remove':
-                        if (!empty($resourceArray['deleted'])) {
+                        if ($this->permissions['purge_deleted'] && !empty($resourceArray['deleted'])) {
                             $resourceArray['actions'][] = $this->actions[$button];
                         }
                         break;
@@ -499,10 +521,19 @@ class CollectionsResourceGetListProcessor extends modObjectGetListProcessor
                         $resourceArray['actions'][] = $this->actions['open'];
 //                        }
                         break;
+                    case 'edit':
+                        if ($this->permissions['edit_document']) {
+                            $resourceArray['actions'][] = $this->actions[$button];
+                        }
+                        break;
+                    case 'view':
+                        if ($this->permissions['view_document']) {
+                            $resourceArray['actions'][] = $this->actions[$button];
+                        }
+                        break;
                     default:
                         $resourceArray['actions'][] = $this->actions[$button];
                 }
-
             }
         }
 
@@ -517,22 +548,42 @@ class CollectionsResourceGetListProcessor extends modObjectGetListProcessor
             $resourceArray['menu_actions']['open'] = $this->actions['open'];
         }
 
-        $resourceArray['menu_actions']['view'] = $this->actions['view'];
-        $resourceArray['menu_actions']['edit'] = $this->actions['edit'];
+        if ($this->permissions['view_document']) {
+            $resourceArray['menu_actions']['view'] = $this->actions['view'];
+        }
+        
+        if ($this->permissions['edit_document']) {
+            $resourceArray['menu_actions']['edit'] = $this->actions['edit'];
+        }
+        
         $resourceArray['menu_actions']['duplicate'] = $this->actions['duplicate'];
-        $resourceArray['menu_actions']['quickupdate'] = $this->actions['quickupdate'];
+        
+        if ($this->permissions['edit_document']) {
+            $resourceArray['menu_actions']['quickupdate'] = $this->actions['quickupdate'];
+        }
 
         if (!empty($resourceArray['published'])) {
-            $resourceArray['menu_actions']['unpublish'] = $this->actions['unpublish'];
+            if ($this->permissions['unpublish_document']) {
+                $resourceArray['menu_actions']['unpublish'] = $this->actions['unpublish'];
+            }
         } else {
-            $resourceArray['menu_actions']['publish'] = $this->actions['publish'];
+            if ($this->permissions['publish_document']) {
+                $resourceArray['menu_actions']['publish'] = $this->actions['publish'];
+            }
         }
 
         if (!empty($resourceArray['deleted'])) {
-            $resourceArray['menu_actions']['undelete'] = $this->actions['undelete'];
-            $resourceArray['menu_actions']['remove'] = $this->actions['remove'];
+            if ($this->permissions['undelete_document']) {
+                $resourceArray['menu_actions']['undelete'] = $this->actions['undelete'];
+            }
+            
+            if ($this->permissions['purge_deleted']) {
+                $resourceArray['menu_actions']['remove'] = $this->actions['remove'];
+            }
         } else {
-            $resourceArray['menu_actions']['delete'] = $this->actions['delete'];
+            if ($this->permissions['delete_document']) {
+                $resourceArray['menu_actions']['delete'] = $this->actions['delete'];
+            }
         }
 
         return $resourceArray;
